--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="style.css">
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Puneeth's Website</title>
+ <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="resume.html">Resume</a>
-            <a href="bio.html">Bio-data</a>
-        </nav>
-    </header>
-    <main>
-        <h2>About Me</h2>
-        <p>Hi, I'm [Your Name]. Welcome to my personal website!</p>
-    </main>
-    <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
-    </footer>
+ <header>
+ <h1>Welcome to Puneeth's Website</h1>
+ <nav>
+ <a href="index.html"><i class="fas fa-home"></i> Home</a>
+ <a href="resume.html"><i class="fas fa-file-alt"></i> Resume</a>
+ <a href="bio.html"><i class="fas fa-user"></i> Bio-data</a>
+ </nav>
+ </header>
+ <main>
+ <h2>About Me</h2>
+ <p> I'm <strong>Puneeth</strong>. Welcome to my personal website! </p>
+ <button onclick="alert('Thanks for visiting!')">Click Me!</button>
+ </main>
+ <footer>
+ <p>&copy; 2024 Puneeth. All rights reserved.</p>
+ <p>Follow me: 
+ <a href="https://github.com" target="_blank"><i class="fab fa-github"></i> 
+GitHub</a>
+ </p>
+ </footer>
 </body>
 </html>
