--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@ and Engineering, with hands-on experience in software development, data struc-tu
 (Nov 2022 - Ongoing)</p>
  <p>No prior work experience; currently pursuing Bachelor's studies in Computer Science.</p>
  <h2>Education</h2>
- <p>Bachelor of Engineering - BE, Computer Engineering (2022 - Ongoing)</p> 
+ <p>Bachelor of Engineering - BE, Artificial Intelligence and Data science (2022 - Ongoing)</p> 
  <h2>Skills</h2>
  <p>Java</p>
  <p>Software Devleoper</p> 
